--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/Yunadanta/nc-news/issues"
   },
-  "homepage": "https://github.com/Yunadanta/nc-news#readme"
+  "homepage": "https://github.com/Yunadanta/nc-news#readme",
+  "dependencies": {
+    "@reach/router": "^1.3.4",
+    "axios": "^0.21.0"
+  }
 }
